# KrakenOps

./: .gitignore  CLAUDE.md  LICENSE  README.md  compose.yml
.github/: dependabot.yml
apps/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/backend/app/: config.py  config_file.py  ingest.py  main.py
apps/backend/app/db/: __init__.py  migrations.py  models.py  pricing.py  session.py
apps/backend/app/ingest/: __init__.py  otel_logs.py  otel_metrics.py
apps/backend/app/poller/: __init__.py  github.py  loop.py  orchestrator.py
apps/backend/app/realtime/: __init__.py  bus.py  ws.py
apps/backend/app/routes/: __init__.py  agents.py  costs.py  events.py  health.py  hooks.py  logs_ingest.py  metrics_ingest.py  processes.py  projects.py  spans.py  tickets.py  traces.py  workstreams.py
apps/backend/app/sampler/: __init__.py  loop.py  processes.py
apps/backend/app/workstreams/: __init__.py  repo.py  subscriber.py
apps/backend/migrations/: 001_initial.sql  002_orchestration.sql  003_external_telemetry.sql  004_workstreams.sql
apps/backend/pricing/: default.yaml
apps/backend/tests/: _pb_builder.py  _pb_builder_external.py  conftest.py  test_bus.py  test_command_endpoints.py  test_config_file.py  test_costs_by_ticket.py  test_hooks.py  test_ingest.py  test_migrations.py  test_orchestration_routes.py  test_orchestrator.py  test_otel_logs_ingest.py  test_otel_metrics_ingest.py  test_poller.py  test_pricing.py  test_processes_sampler.py  test_realtime.py  test_routes.py  test_sampler.py  test_smoke.py  test_workstreams.py
docs/: RELEASING.md
(+62 files in other folders)
